<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DataTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="b1">100 b</string>
    <string name="b2">1 KB</string>
    <string name="b3">1 MB</string>
    <string name="b4">2 MB</string>
    <string name="b5">10 MB</string>
    <string name="b6">100 MB</string>
    <string name="bla">bla</string>

</resources>
